fix(Checkbox): Align checkbox with label text

--- a/src/components/common/Checkbox.module.css
+++ b/src/components/common/Checkbox.module.css
@@ -4,6 +4,8 @@
 }
 
 .label {
+  display: flex;
+  align-items: center;
   padding-left: 1.5em;
 }
 
